Prevent notification popup cutoff

--- a/resources/assets/less/bem/notification-popup.less
+++ b/resources/assets/less/bem/notification-popup.less
@@ -36,7 +36,7 @@
     -webkit-overflow-scrolling: touch;
     overflow: auto;
     padding: 0 10px;
-    max-height: calc(var(--vh, 1vh) * 100 - (@nav2-height + 20px));
+    max-height: calc(var(--vh, 1vh) * 100 - (@nav2-height + 30px));
   }
 
   &__show-more {
